--- a/style.css
+++ b/style.css
@@ -1,3 +1,76 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    background-color: lightgray;
+}
+
+
+/* styles for login form */
+
+.login-form-container {
+    background-color: white;
+    width: 600px;
+    margin: 100px auto;
+    padding: 20px 0 15px;
+    border-radius: 5px;
+}
+
+.login-form {
+    margin: 20px auto;
+    width: 500px;
+}
+
+.login-form * {
+    display: block;
+}
+
+.login-form-label {
+    margin: 15px 0 2px;
+}
+
+.input-field {
+    width: 100%;
+    height: 60px;
+    padding: 5px;
+    font-size: 16px;
+}
+
+.submit-btn {
+    width: 100%;
+    height: 50px;
+    margin-top: 30px;
+    font-size: 20px;
+}
+
+
+/* styles for input panel */
+
 #input-panel {
     visibility: hidden;
+    position: absolute;
+    bottom: 0;
+    background-color: white;
+    width: 100%;
+    height: 200px;
+}
+
+#close-btn {
+    cursor: pointer;
+    position: absolute;
+    right: 0px;
+    font-size: 50px;
+    line-height: 40px;
+    width: 45px;
+    padding: 1px;
+    border-width: 0;
+    background-color: white;
+    color: red;
+}
+
+#close-btn:hover {
+    color: gray;
 }
