--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
 }
 
 
-/* styles for login form */
+/* styles for signup form */
 
-.login-form-container {
+.signup-form-container {
     background-color: white;
     width: 600px;
     margin: 100px auto;
@@ -19,16 +19,16 @@ body {
     border-radius: 5px;
 }
 
-.login-form {
+.signup-form {
     margin: 20px auto;
     width: 500px;
 }
 
-.login-form * {
+.signup-form * {
     display: block;
 }
 
-.login-form-label {
+.signup-form-label {
     margin: 15px 0 2px;
 }
 
