--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     width: 600px;
     margin: 100px auto;
     padding: 20px 0 15px;
-    border-radius: 5px;
+    border-radius: 7px;
 }
 
 .signup-form {
@@ -49,13 +49,22 @@ body {
 
 /* styles for input panel */
 
-#input-panel {
+.input-panel-container {
     visibility: hidden;
-    position: absolute;
+    position: fixed;
     bottom: 0;
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+#input-panel {
+    position: fixed;
+    bottom: -200px;
     background-color: white;
     width: 100%;
     height: 200px;
+    transition: 0.2s;
 }
 
 #close-btn {
