--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@ body {
     background-color: white;
     width: 600px;
     margin: 100px auto;
-    padding: 20px 0 15px;
+    padding: 25px 0 15px;
     border-radius: 7px;
+    box-shadow: 0 0 7px 0 #9D9D9D;
+}
+
+.signup-form-title {
+    text-align: center;
 }
 
 .signup-form {
