--- a/style.css
+++ b/style.css
@@ -12,12 +12,15 @@ body {
 /* styles for signup form */
 
 .signup-form-container {
-    background-color: white;
     width: 600px;
     margin: 100px auto;
     padding: 25px 0 15px;
+    position: relative;
+    z-index: 3;
+    background-color: white;
     border-radius: 7px;
     box-shadow: 0 0 7px 0 #9D9D9D;
+    
 }
 
 .signup-form-title {
@@ -55,67 +58,82 @@ body {
 /* styles for input panel */
 
 .input-panel-container {
-    visibility: hidden;
+    width: 100%;
+    height: 100%;
     position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 200px;
+    z-index: 1;
+    background-color: #A5A5A5;
+    visibility: hidden;
     overflow: hidden;
+    
 }
 
 #input-panel {
-    position: fixed;
-    bottom: -200px;
-    background-color: white;
     width: 100%;
-    height: 200px;
-    transition: 0.2s;
+    height: 100%;
+    position: fixed;
+    bottom: -100%;
+    display: grid;
+    grid-template-columns: 1fr 600px 1fr;
+    align-items: center;
+    background-color: transparent;
+    transition: 0.4s;
+}
+
+#input-panel-left {
+    grid-column: 1;
+    text-align: center;
+}
+
+#input-panel-right {
+    grid-column: 3;
 }
 
 #close-btn {
-    cursor: pointer;
-    position: absolute;
-    right: 0px;
-    font-size: 50px;
-    line-height: 40px;
     width: 45px;
     padding: 1px;
+    position: absolute;
+    right: 10px;
+    z-index: 2;
+    cursor: pointer;
+    font-size: 70px;
+    line-height: 60px;
     border-width: 0;
-    background-color: white;
+    background-color: transparent;
     color: red;
 }
 
 .help-btn {
-    cursor: pointer;
+    
+    /* CSS for putting at lower right corner
     position: absolute;
     right: 10px;
-    bottom: 10px;
+    bottom: 10px; */
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    cursor: pointer;
     text-decoration: none;
-    color: gray;
+    color: white;
     font-size: 20px;
 }
 
 #close-btn:hover {
-    color: gray;
+    color: maroon;
 }
 
 #morse-key-btn {
-    cursor: pointer;
-    background-color: white;
-    border: 1px solid black;
-    display: block;
-    margin: 0 auto;
     width: 302px;
     height: 142px;
+    cursor: pointer;
+    background-color: white;
+    border: 1px solid transparent;
+    display: block;
+    margin-left: 10%;
     padding: 0;
 }
 
-/*
-#morse-key img {
-    height: 150px;
-}
-*/
-
 #morse-key {
-    background-color: #EEE;
+    background-color: transparent;
 }
