--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: lightgray;
+    background-color: white; /* white or lightgray */
 }
 
 
@@ -63,14 +63,13 @@ body {
     position: fixed;
     bottom: 0;
     z-index: 1;
-    background-color: #A5A5A5;
+    background-color: white;
     visibility: hidden;
     overflow: hidden;
-    
 }
 
 #input-panel {
-    width: 100%;
+    width: 100vw;
     height: 100%;
     position: fixed;
     bottom: -100%;
@@ -115,7 +114,7 @@ body {
     margin: 0 auto;
     cursor: pointer;
     text-decoration: none;
-    color: white;
+    color: transparent;
     font-size: 20px;
 }
 
@@ -126,14 +125,24 @@ body {
 #morse-key-btn {
     width: 302px;
     height: 142px;
+    margin-left: 30px;
+    padding: 0;
     cursor: pointer;
-    background-color: white;
+    background-color: transparent;
     border: 1px solid transparent;
     display: block;
-    margin-left: 10%;
-    padding: 0;
 }
 
 #morse-key {
     background-color: transparent;
+}
+
+#finger {
+    width: 200px;
+    position: relative;
+    left: 175px;
+    z-index: -1;
+    visibility: hidden;
+    user-select: none;
+    transition: top 50ms;
 }
