--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     background-color: white;
     border-radius: 7px;
     box-shadow: 0 0 7px 0 #9D9D9D;
-    
 }
 
 .signup-form-title {
@@ -29,8 +28,8 @@ body {
 }
 
 .signup-form {
-    margin: 20px auto;
     width: 500px;
+    margin: 20px auto;
 }
 
 .signup-form * {
@@ -46,6 +45,20 @@ body {
     height: 60px;
     padding: 5px;
     font-size: 16px;
+}
+
+#username-clear {
+    position: absolute;
+    top: 111px;
+    right: 60px;
+    display: none;
+    cursor: pointer;
+    font-size: 36px;
+    color: gray;
+}
+
+#username-clear:hover {
+    color: red;
 }
 
 .submit-btn {
