--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
 .input-panel-container {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     z-index: 1;
     background-color: white;
@@ -85,7 +85,7 @@ body {
 #input-panel {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     bottom: -100%;
     background-color: transparent;
     transition: 0.4s;
