--- a/style.css
+++ b/style.css
@@ -6,7 +6,24 @@
 }
 
 body {
-    background-color: white; /* white or lightgray */
+    background-color: #F0F0F0;
+}
+
+#source-code {
+    position: absolute;
+    right: 15px;
+    bottom: 15px;
+    z-index: 4;
+    color: black;
+    text-decoration: none;
+}
+
+#source-code i {
+    padding-right: 5px;
+}
+
+#source-code:hover {
+    text-decoration: underline;
 }
 
 
@@ -77,7 +94,7 @@ body {
     position: absolute;
     bottom: 0;
     z-index: 1;
-    background-color: white;
+    background-color: transparent;
     visibility: hidden;
     overflow: hidden;
 }
@@ -129,12 +146,12 @@ body {
     height: 280px;
     margin: 0 auto;
     cursor: pointer;
-    background-color: white;
+    background-color: transparent;
     border: none;
 }
 
 .help-btn:hover {
-    background-color: #F0F0F0;
+    background-color: #E0E0E0;
 }
 
 .help-btn svg {
@@ -155,7 +172,7 @@ body {
     margin: 5px auto;
     text-align: left;
     font-size: 18px;
-    color: #404040;
+    color: black;
 }
 
 .help-btn-caption li {
